Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7836

Can't "Import existing build" to configured project anymore

XMLWordPrintable

    • dca2051210c001b771d530b3e3024e1476aca508

      In Creator 2.5, one could import an existing build by entering its path in Projects mode and clicking the link "Import existing build". This is not possible in Creator 2.6 anymore.

        For Gerrit Dashboard: QTCREATORBUG-7836
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes