ProjectExplorer: Add option to import existing builds

Add option to import existing builds back into Projects mode.

Click an "Add Kit" to get the entry (for projects that actually
support importing builds).

Task-number: QTCREATORBUG-7836
Change-Id: I43cf0f0ba5f80c88b6ffce1381f34f5591213e05
Reviewed-by: Daniel Teske <daniel.teske@digia.com>